# Library-Database-App

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  database.py  main.py  pyproject.toml
backend/routers/: router_loans.py
backend/schemas/: authors.py  books.py  schema_books.py  schema_enums.py  schema_loans.py  schema_users.py  users.py
backend/tests/: test_loans.py
backend/tools/: book_scraper.py
